--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -55,7 +55,7 @@
 
 }
 
-.nav_cart{
+.nav_action {
     color: $white;
     background-color: transparent;
     border: none;
@@ -66,8 +66,7 @@
 
     cursor: pointer;
 
-    padding: 3px;
-
+    padding: 3px 3px;
 }
 
 .cartIcon{
