--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -26,7 +26,8 @@
 
         width: 100%;
         height: 100vh;
-                
+        gap: 30px;
+        text-align: center;                
 
         .hero_text{
             position: absolute;
